--- a/HTML/CSS-01.html
+++ b/HTML/CSS-01.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <title>Hey!</title>
-  <link rel="stylesheet" href="/Learning/HTML/CSS-01.css">
+<!--  <link rel="stylesheet" href="/Learning/HTML/CSS-01.css"> -->
+  <link rel="stylesheet" type="text/css" href="CSS-01.css">
 </head>
 <body>
   <h1>Please make me green</h1>
