--- a/HTML/CSS-02.html
+++ b/HTML/CSS-02.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Hipster Logo</title>
-    <link rel="stylesheet" type="text/css" href="app.css">
+    <link rel="stylesheet" type="text/css" href="CSS-02.css">
 </head>
 <body>
     <h1>Purple Grain</h1>
